[gd_scene load_steps=6 format=2]

[ext_resource path="res://clients/modern_client/images/lens.png" type="Texture" id=1]
[ext_resource path="res://clients/modern_client/images/hand.png" type="Texture" id=2]
[ext_resource path="res://clients/modern_client/bubbles.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("bubble_anchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bubble_anchor/bubbles:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="item_actions" type="Node2D"]
position = Vector2( 449.7, 549.838 )
script = ExtResource( 3 )

[node name="bubble_anchor" type="Node2D" parent="."]
position = Vector2( 0, -200 )

[node name="bubbles" type="Node2D" parent="bubble_anchor"]

[node name="bubble_left" type="Node2D" parent="bubble_anchor/bubbles"]
position = Vector2( -60, 0 )

[node name="sprite" type="Sprite" parent="bubble_anchor/bubbles/bubble_left"]
texture = ExtResource( 1 )

[node name="bubble_right" type="Node2D" parent="bubble_anchor/bubbles"]
position = Vector2( 60, 0 )

[node name="sprite" type="Sprite" parent="bubble_anchor/bubbles/bubble_right"]
texture = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/open = SubResource( 2 )
